--- a/graciaweb-app/resources/css/style.css
+++ b/graciaweb-app/resources/css/style.css
@@ -292,7 +292,15 @@ html{
 }
 
 .navbar {
-    width: 100%; /* Change this value to your desired width */
+    width: 100%; 
   }
 
+
+.navbar {
+    position: sticky;
+    top: 0;
+    z-index: 1000; 
+    background-color: #fff; 
+  }
+  
 
